<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_labeling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labeling_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_labeling"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:inputType="none" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/button_labeling"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/labeling_save_start"
        android:textOn="@string/labeling_save_stop" >
    </ToggleButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_session_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_id_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_session_id_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_subject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_subject_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_position_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/editText_position_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:entries="@array/positions_array"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_session_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editText_session_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:inputType="none" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/button_toggle_all"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/start_session"
        android:textOn="@string/stop_session" >
    </ToggleButton>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <!-- android:orientation="horizontal"  -->

        <Button
            android:id="@+id/button_show_wlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/show_wlan" />

        <Button
            android:id="@+id/button_show_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/show_gps" />
    </LinearLayout>

    <Button
        android:id="@+id/button_show_upload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/show_upload" />
    
    <Button
        android:id="@+id/button_sync_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sync_time" />

    <TextView
        android:id="@+id/textView_sync_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sync_time_not_done"
        android:textSize="5pt" />

    <TextView
        android:id="@+id/textView_max_values"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textSize="5pt" />

</LinearLayout>