<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/layout_filters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_toggle_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/toggle_checked" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview_upload"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_buttons"
        android:layout_below="@+id/layout_filters"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >
    </ListView>

    <RelativeLayout
        android:id="@+id/layout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progress_upload_text"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_upload_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_data" />

        <Button
            android:id="@+id/button_modify_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/button_upload_data"
            android:text="@string/modify_id"/>

        <Button
            android:id="@+id/button_delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/button_modify_id"
            android:text="@string/delete_data" />
    </RelativeLayout>

    <TextView
        android:id="@+id/progress_upload_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="..." />

</RelativeLayout>